syntax = "proto3";
package movies_v1;
option go_package = "./movies_v1";

// Запрос всех новостей
message GetMoviesRequest {
  int32 limit = 1;
  int32 page = 2;
}

// Запрос новости по Id
message GetMoviesByIdRequest {
  int32 id = 1;
}

// Запрос новостей c фильтрами
message GetMoviesByFilterRequest {
  GetMoviesByFilterItem filters = 1;
  int32 limit = 2;
  int32 page = 3;
}
message GetMoviesByFilterItem {
  int32 typeMovie = 1;
  string search = 2;
  map<int32, int32> genres = 3;
  int32 yearMin = 4;
  int32 yearMax = 5;
  bool bestMovie = 6;
}

// Запрос на добавление новости
message AddMoviesRequest {
  string title = 1;
  string description = 2;
  string country = 3;
  int32 releaseDate = 4;
  int32 timeMovie = 5;
  double scoreKP = 6;
  double scoreIMDB = 7;
  string poster = 8;
  int32 typeMovie = 9;
  map<int32, int32> genres = 10;
}

// Запрос на удаление новости
message DelMoviesRequest {
  int32 id = 1;
}


// Вывод всех/категоризированных новостей
message GetMoviesResponse {
  repeated GetMovieItem movies = 1;
}
message GetMovieItem {
  int32 id = 1;
  string title = 2;
  string description = 3;
  int32 releaseDate = 4;
  double scoreKP = 5;
  double scoreIMDB = 6;
  string poster = 7;
  int32 typeMovie = 8;
  string genres = 9;
}

// Вывод новости по Id
message GetMoviesByIdResponse {
  int32 id = 1;
  string title = 2;
  string description = 3;
  string country = 4;
  int32 releaseDate = 5;
  int32 timeMovie = 6;
  double scoreKP = 7;
  double scoreIMDB = 8;
  string poster = 9;
  int32 typeMovie = 10;
  string genres = 11;
}

// Добавление новости
message AddMoviesResponse {
  int32 id = 1;
  string err = 2;
}

// Удаление новости
message DelMoviesResponse {
  string err = 1;
}

service MoviesV1 {
  rpc GetMovies(GetMoviesRequest) returns (GetMoviesResponse);
  rpc GetMoviesById(GetMoviesByIdRequest) returns (GetMoviesByIdResponse);
  rpc GetMoviesByCategory(GetMoviesByFilterRequest) returns (GetMoviesResponse);
  rpc AddMovies(AddMoviesRequest) returns (AddMoviesResponse);
  rpc DelMovies(DelMoviesRequest) returns (DelMoviesResponse);
}
